--- a/Packet_Processor_Module/modelsim.ini
+++ b/Packet_Processor_Module/modelsim.ini
@@ -231,9 +231,10 @@ UnbufferedOutput = 0
 ; List of dynamically loaded objects for Verilog PLI applications
 ; Veriuser = veriuser.sl
 
-IgnoreWarning = 0
+IgnoreWarning = 1
 VoptFlow = 1
 WLFDeleteOnQuit = 1
+IgnoreSVAWarning = 1
 [lmc]
 ; ModelSim's interface to Logic Modeling's SmartModel SWIFT software
 libsm = $MODEL_TECH/libsm.sl
