--- a/Transmitter_Module/makefile
+++ b/Transmitter_Module/makefile
@@ -14,18 +14,16 @@ include /home/ecegrid/a/ece337/Course_Prod/course_make_vars
 
 # Fill in the appropriate filenames for the Phase 1 submodule code files (without the 'source/')
 # The contents of these variables must be plain text (no functions or variable references)
-EDGE_FILE			:= edge_detect.sv
-EOP_FILE			:= eop_detect.sv
-DECODE_FILE		:= decode.sv
-RX_FIFO_FILE	:= rx_fifo.sv
+EDGE_FILE			:= flex_counter.sv
+EOP_FILE			:= USB_Timer.sv
+
 
 # Fill in the appropriate filenames for the Phase 1 submodule test benches (without the 'source/')
 # The contents of these variables must either be plain text (no functions or variable references)
 # or references to the Phase 1 submodule code file variables
 TB_EDGE_FILE		:= tb_$(EDGE_FILE)
 TB_EOP_FILE			:= tb_$(EOP_FILE)
-TB_DECODE_FILE	:= tb_$(DECODE_FILE)
-TB_RX_FIFO_FILE	:= tb_$(RX_FIFO_FILE)
+
 
 # Fill in the names of any test bench helper code files (code files referenced by your testbenches
 # other than the actual design files)( do not include the 'source/') (filenames must start with 'tb_')
@@ -37,8 +35,8 @@ TB_HELPER_FILES	:=
 # AND THE AUTOMATED GRADING SYSTEM
 # The contents of these variables must either be plain text (no functions or variable references)
 # or references to the Phase 1 submodule code file variables
-COMPONENT_FILES	:= $(EDGE_FILE) $(EOP_FILE) $(DECODE_FILE) $(RX_FIFO_FILE)
-COMPONENT_FILES += shift_register.sv rcu.sv timer.sv sync.sv
+
+COMPONENT_FILES += USB_Timer.sv
 COMPONENT_FILES += flex_counter.sv flex_stp_sr.sv
 
 #COMPONENT_FILES	:= flex_counter.sv
@@ -46,7 +44,7 @@ COMPONENT_FILES += flex_counter.sv flex_stp_sr.sv
 # Specify the name of the top level file (do not include the source folder in the name)
 # NOTE: YOU WILL NEED TO SET THIS VARIABLE'S VALUE WHEN WORKING WITH HEIRARCHICAL DESIGNS
 # AND THE AUTOMATED GRADING SYSTEM
-TOP_LEVEL_FILE	:= usb_receiver.sv
+TOP_LEVEL_FILE	:= USB_Timer.sv
 #TOP_LEVEL_FILE	:= timer.sv
 
 # Specify the filename of the test bench you want to use (without the 'source/')
