--- a/Lab6/makefile
+++ b/Lab6/makefile
@@ -39,14 +39,14 @@ TB_HELPER_FILES	:=
 # or references to the Phase 1 submodule code file variables
 COMPONENT_FILES	:= $(EDGE_FILE) $(EOP_FILE) $(DECODE_FILE) $(RX_FIFO_FILE)
 COMPONENT_FILES += shift_register.sv rcu.sv timer.sv sync.sv
-COMPONENT_FILES += flex_counter.sv flex_stp_sr.sv
+COMPONENT_FILES += flex_counter.sv flex_stp_sr.sv usb_receiver.sv rxpu.sv
 
 #COMPONENT_FILES	:= flex_counter.sv
 
 # Specify the name of the top level file (do not include the source folder in the name)
 # NOTE: YOU WILL NEED TO SET THIS VARIABLE'S VALUE WHEN WORKING WITH HEIRARCHICAL DESIGNS
 # AND THE AUTOMATED GRADING SYSTEM
-TOP_LEVEL_FILE	:= usb_receiver.sv
+TOP_LEVEL_FILE	:= receiver.sv
 #TOP_LEVEL_FILE	:= timer.sv
 
 # Specify the filename of the test bench you want to use (without the 'source/')
