transmitter testbench updated

--- a/Transmitter_Module/makefile
+++ b/Transmitter_Module/makefile
@@ -36,7 +36,7 @@ TB_HELPER_FILES	:=
 # The contents of these variables must either be plain text (no functions or variable references)
 # or references to the Phase 1 submodule code file variables
 
-COMPONENT_FILES := flex_pio.si.sv
+COMPONENT_FILES := flex_pio_si.sv
 COMPONENT_FILES += USB_Timer.sv
 COMPONENT_FILES += flex_counter.sv flex_pts_sr.sv
 COMPONENT_FILES += bit_stuff.sv Byte_Register.sv Encoder.sv byte_transmitter.sv txpu.sv CRC_Calculator.sv 
@@ -49,7 +49,8 @@ COMPONENT_FILES += bit_stuff.sv Byte_Register.sv Encoder.sv byte_transmitter.sv 
 # AND THE AUTOMATED GRADING SYSTEM
 #TOP_LEVEL_FILE	:= USB_Timer.sv
 #TOP_LEVEL_FILE	:= timer.sv
-TOP_LEVEL_FILE	:= transmitter.sv
+#TOP_LEVEL_FILE	:= transmitter.sv
+TOP_LEVEL_FILE := CRC_Calculator.sv
 
 # Specify the filename of the test bench you want to use (without the 'source/')
 TEST_BENCH	:= tb_$(TOP_LEVEL_FILE)
